@@ -1,3 +1,7 @@
+2000-11-05  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
+	* actors.cc, cheat.cc, drag.cc, exult.cc, gameclk.cc, spells.cc: 
+	moved cheats to new class
+
 2000-11-04  Jeff Freedman  <jeff@amy.nerble.net>
 
 	* vgafile.cc, combat.cc:  Look up ammo family.
